CRUD customer completed
