# microservices/customer-microservice/src/main/java/com/aeas/microservices/customer_microservice/openapi/api_ms_customer.yml
@@ -34,32 +34,36 @@ paths:
         content:
           application/json:
             schema:
-              $ref: '#/components/schemas/Customer'
+              $ref: '#/components/schemas/PostRequestCustomer'
           application/xml:
             schema:
-              $ref: '#/components/schemas/Customer'
+              $ref: '#/components/schemas/PostRequestCustomer'
           application/x-www-form-urlencoded:
             schema:
-              $ref: '#/components/schemas/Customer'
+              $ref: '#/components/schemas/PostRequestCustomer'
       responses:
         default:
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/Customer'
+                $ref: '#/components/schemas/PostResponseCustomer'
             application/xml:
               schema:
-                $ref: '#/components/schemas/Customer'
-  /customer/{firstName}:
+                $ref: '#/components/schemas/PostResponseCustomer'
+        '400':
+          description: Invalid id supplied
+        '500':
+          description: Server error
+  /customer/{id}:
     get:
       tags:
         - customer
-      summary: Get customer by firstName
+      summary: Get customer by id
       description: ''
-      operationId: getCustomerByfirstName
+      operationId: getCustomerById
       parameters:
-        - name: firstName
+        - name: id
           in: path
           description: 'The name that needs to be fetched. Use customer1 for testing. '
           required: true
@@ -76,7 +80,7 @@ paths:
               schema:
                 $ref: '#/components/schemas/Customer'
         '400':
-          description: Invalid firstName supplied
+          description: Invalid id supplied
         '404':
           description: Customer not found
     put:
@@ -86,7 +90,7 @@ paths:
       description: This can only be done by the logged in customer.
       operationId: updateCustomer
       parameters:
-        - name: firstName
+        - name: id
           in: path
           description: name that need to be deleted
           required: true
@@ -105,10 +109,14 @@ paths:
             schema:
               $ref: '#/components/schemas/Customer'
       responses:
-        default:
+        '202':
           description: successful operation
-  /customer/{id}:
-      delete:
+        '400':
+          description: Invalid id supplied
+        '404':
+          description: Customer not found
+
+    delete:
         tags:
           - customer
         summary: Delete customer
@@ -122,10 +130,43 @@ paths:
             schema:
               type: string
         responses:
+          '202':
+            description: successful operation
           '400':
             description: Invalid id supplied
           '404':
             description: Customer not found
+          '500':
+            description: Server error 
+  /customer/:
+    get:
+      tags:
+        - customer
+      summary: Get customers
+      description: ''
+      operationId: getCustomers
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  allOf:
+                    - $ref: '#/components/schemas/Customer'
+            application/xml:
+              schema:
+                type: array
+                items:
+                  allOf:
+                    - $ref: '#/components/schemas/Customer'
+        '400':
+          description: Invalid id supplied
+        '404':
+          description: Customer not found
+        '500':
+          description: Server error
 components:
   schemas:
     Customer:
@@ -152,6 +193,33 @@ components:
         city:
           type: string
           example: "Madrid"
+    PostRequestCustomer:
+      type: object
+      properties:
+        firstName:
+          type: string
+          example: John
+        lastName:
+          type: string
+          example: James
+        email:
+          type: string
+          example: john@email.com
+        phone:
+          type: string
+          example: '12345'
+        address:
+          type: string
+          example: 'Calle Alcalá' 
+        city:
+          type: string
+          example: "Madrid"
+    PostResponseCustomer:
+      type: object
+      properties:
+        id:
+          type: string
+          example: the id
   requestBodies:
     CustomerArray:
       description: List of customer object
